# Neural

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  loss.cpp  vcpkg-configuration.json
include/: constants.hpp  inits.hpp  loss.hpp  nn.hpp  rng.hpp
src/: functions.cpp  inits.cpp  loss.cpp  main.cpp  nn.cpp
